# dr-when

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dr_when/: cli.py  config.py  engine.py  install.py
src/dr_when/plugins/: __init__.py  budget_api.py  context.py  cost.py  effort.py  session.py  time_plugin.py  wakeup.py
src/drwhen/: __init__.py  engine.py  install.py
src/drwhen/plugins/: budget_oauth.py  model.py
tests/: test_engine.py  test_install.py  test_plugins.py
