[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-when"
version = "0.1.0"
description = "Pluggable status-line renderer for agents (Dr. When)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "GigaRo Crew"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
budget = ["requests>=2.28"]
test = ["pytest>=7"]

[project.scripts]
drwhen = "dr_when.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dr_when" = ["py.typed"]
